--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-dom": "^18.3.1",
     "@supabase/supabase-js": "^2.44.0",
     "lucide-react": "^0.400.0",
-    "tailwindcss": "^3.4.4"
+    "tailwindcss": "^3.4.4",
+    "nodemailer": "3.1.8",
+    "bcryptjs": "2.4.3"
   },
   "devDependencies": {
     "@types/node": "^20.14.0",
