--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.44.0",
+    "@types/nodemailer": "^7.0.10",
+    "bcryptjs": "2.4.3",
+    "lucide-react": "^0.400.0",
     "next": "14.2.5",
+    "nodemailer": "^8.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "@supabase/supabase-js": "^2.44.0",
-    "lucide-react": "^0.400.0",
-    "tailwindcss": "^3.4.4",
-    "nodemailer": "3.1.8",
-    "bcryptjs": "2.4.3"
+    "tailwindcss": "^3.4.4"
   },
   "devDependencies": {
     "@types/node": "^20.14.0",
